--- a/src/components/Main/Task/_Task.scss
+++ b/src/components/Main/Task/_Task.scss
@@ -6,6 +6,7 @@
   height: 100%;
 
   &__left {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -162,6 +163,7 @@
   }
 
   &__pos1 {
+    flex-shrink: 0;
     color: #95989C;
     font-family: Inter;
     font-size: 12px;
