--- a/src/components/Login/_Login.scss
+++ b/src/components/Login/_Login.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 84px 74px;
+  padding: 84px 200px;
 
   &__container {
     display: flex;
@@ -94,6 +94,7 @@
     text-align: center;
     font-weight: 400;
     line-height: 20px;
+    text-decoration: none;
     padding: 14px;
     margin: 0 0 12px;
     opacity: 1;
