--- a/src/components/Menu/_Menu.scss
+++ b/src/components/Menu/_Menu.scss
@@ -5,7 +5,11 @@
   background: #252727;
   padding: 64px 0;
   height: 100vh;
-  width: 320px;
+  width: 328px;
+
+  &_hidden{
+    display: none;
+  }
 
   &__logo {
     display: flex;
@@ -29,6 +33,7 @@
   }
 
   &__menu {
+    width: 328px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -42,6 +47,8 @@
   }
 
   &__link {
+    display: flex;
+    align-items: center;
     width: 100%;
     color: #8F9090;
     font-family: Inter;
@@ -65,10 +72,48 @@
     }
   }
 
+  &__exit {
+    width: 200px;
+    background-color: #DD565A;
+    color: #FFF;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 12px;
+    padding: 15px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    opacity: 1;
+    transition: opacity 0.2s ease-in-out 0.1s;
+
+    &:hover {
+      opacity: 0.6;
+    }
+  }
+
   &__profile {
     display: flex;
     align-items: center;
-    margin: 0 0 30px 64px;
+    opacity: 1;
+    transition: opacity 0.3s ease;
+
+    &:hover {
+      opacity: 0.6;
+    }
+  }
+
+  &__telegram {
+    width: 30px;
+    height: 30px;
+    margin-right: 20px;
+  }
+
+  &__profile-box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30px;
+    margin-left: 64px;
   }
 
   &__photo {
