--- a/src/components/Menu/_Menu.scss
+++ b/src/components/Menu/_Menu.scss
@@ -114,6 +114,10 @@
     align-items: flex-start;
     gap: 30px;
     margin-left: 64px;
+
+    &_hidden {
+      display: none;
+    }
   }
 
   &__photo {
@@ -143,5 +147,29 @@
     font-style: normal;
     font-weight: 400;
     line-height: 12px;
+  }
+
+  &__button-login {
+    width: 200px;
+    background-color: #a7bcff;
+    color: #343434;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 12px;
+    padding: 15px;
+    margin-left: 64px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    opacity: 1;
+    transition: opacity 0.2s ease-in-out 0.1s;
+
+    &_hidden {
+      display: none;
+    }
+
+    &:hover {
+      opacity: 0.6;
+    }
   }
 }
