--- a/src/components/Menu/_Menu.scss
+++ b/src/components/Menu/_Menu.scss
@@ -134,11 +134,12 @@
 
   &__name {
     color: #FFF;
+    text-align: left;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 12px;
-    margin-bottom: 5px;
+    margin-bottom: 8px;
   }
 
   &__position {
