--- a/src/components/Main/Project/_Project.scss
+++ b/src/components/Main/Project/_Project.scss
@@ -1,27 +1,47 @@
 .project {
   font-family: Inter, Arial, sans-serif;
   display: flex;
-  justify-content: space-between;
   align-items: flex-start;
   width: 100%;
   height: 100%;
 
   &__left {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: 40px 36px 92px 74px;
     border-right: 1px solid rgba(217, 217, 217, 0.5);
-    height: 800px;
     justify-content: space-between;
     overflow-x: hidden;
+
+    &::-webkit-scrollbar {
+      width: 5px;
+      background-color: #FFF;
+      &-thumb {
+        background-color: #D9D9D97F;
+        width: 10px;
+        border-radius: 3px;
+      }
+    }
   }
 
   &__space {
     &_1 {
-      width: 570px;
+      width: 590px;
+      height: 600px;
+      overflow-x: hidden;
+
+      &::-webkit-scrollbar {
+        width: 5px;
+        background-color: #FFF;
+        &-thumb {
+          background-color: #D9D9D97F;
+          width: 10px;
+          border-radius: 3px;
+        }
+      }
     }
+
 
     &_2 {
       width: 370px;
@@ -47,15 +67,20 @@
     background: #F4F6F7;
     margin-bottom: 12px;
     cursor: pointer;
-    opacity: 1;
-    transition: opacity 0.2s ease-in-out 0.1s;
+    margin-left: 0;
+    transition: margin-left 0.2s ease-in-out 0.1s;
+    cursor: pointer;
 
     &_active {
+      margin-left: 10px;
       background: #252727;
     }
 
     &:hover {
-      opacity: 0.75;
+      margin-left: 10px;
+    }
+    &_active:hover {
+      margin-left: 10px;
     }
 
     &_active:hover {
@@ -99,6 +124,7 @@
   &__title {
     color: #26282c;
     font-family: Inter;
+    text-align: left;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -119,14 +145,29 @@
     color: #95989c;
 
     font-family: Inter;
-    font-size: 8px;
+    font-size: 10px;
     font-style: normal;
     font-weight: 400;
     line-height: 12px;
   }
 
   &__worker {
-    width: 68px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
+    width: 100%;
+    height: 100px;
+    overflow-x: hidden;
+    &::-webkit-scrollbar {
+      width: 0;
+      background-color: #FFF;
+      &-thumb {
+        background-color: #D9D9D97F;
+        width: 10px;
+        border-radius: 3px;
+      }
+    }
   }
 
   &__img {
@@ -146,7 +187,7 @@
   &__deadlines {
     color: #9a9da0;
     font-family: Inter;
-    font-size: 8px;
+    font-size: 10px;
     font-style: normal;
     font-weight: 400;
     line-height: 12px;
@@ -164,7 +205,13 @@
     font-style: normal;
     font-weight: 400;
     line-height: 20px;
+    margin-top: 20px;
+    opacity: 1;
+    transition: opacity 0.2s ease-in-out 0.1s;
 
+    &:hover {
+      opacity: 0.6;
+    }
 
     &:active {
       background-color: #89B8FA;
@@ -191,6 +238,7 @@
     align-items: flex-start;
     position: relative;
     margin-bottom: 20px;
+    margin-top: 20px;
 
     &_hidden {
       display: none;
@@ -283,12 +331,29 @@
 
   &__review {
     color: #89b8fa;
-    font-size: 8px;
+    font-size: 10px;
     font-style: normal;
     font-weight: 400;
     line-height: 16px; /* 200% */
     margin-left: 8px;
     margin-top: 3px;
+  }
+
+  &__containers {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    height: 130px;
+    overflow-x: hidden;
+    &::-webkit-scrollbar {
+      width: 0;
+      background-color: #FFF;
+      &-thumb {
+        background-color: #D9D9D97F;
+        width: 10px;
+        border-radius: 3px;
+      }
+    }
   }
 
   &__container {
@@ -299,11 +364,9 @@
     min-height: 56px;
     border-radius: 10px;
     background: #f4f6f7;
-    margin-bottom: 12px;
     cursor: pointer;
     opacity: 1;
     transition: opacity 0.2s ease-in-out 0.1s;
-    //box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.20), 0px 0px 2px 0px rgba(0, 0, 0, 0.08);
     &_active {
       background: #252727;
     }
@@ -348,5 +411,24 @@
     width: 16px;
     height: 16px;
     margin-left: 4px;
+  }
+
+  &__column {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 38px;
+  }
+
+  &__people {
+    border-radius: 10px;
+    width: 350px;
+    color: white;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px;
+    padding: 15px;
+    background-color: #8F9090;
   }
 }
